--- a/astro/src/styles/code.css
+++ b/astro/src/styles/code.css
@@ -1,62 +1,66 @@
-code[class*="language-"],
-pre[class*="language-"] {
-    color: #373b41; /* base05 */
+code[class*='language-'],
+pre[class*='language-'] {
+  color: #373b41; /* base05 */
 }
 
-pre[class*="language-"]::-moz-selection, pre[class*="language-"] ::-moz-selection,
-code[class*="language-"]::-moz-selection, code[class*="language-"] ::-moz-selection {
-    color: inherit;
-    text-shadow: none;
-    background: #c5c8c6; /* base02 */
+pre[class*='language-']::-moz-selection,
+pre[class*='language-'] ::-moz-selection,
+code[class*='language-']::-moz-selection,
+code[class*='language-'] ::-moz-selection {
+  color: inherit;
+  text-shadow: none;
+  background: #c5c8c6; /* base02 */
 }
 
-pre[class*="language-"]::selection, pre[class*="language-"] ::selection,
-code[class*="language-"]::selection, code[class*="language-"] ::selection {
-    color: inherit;
-    text-shadow: none;
-    background: #c5c8c6; /* base02 */
+pre[class*='language-']::selection,
+pre[class*='language-'] ::selection,
+code[class*='language-']::selection,
+code[class*='language-'] ::selection {
+  color: inherit;
+  text-shadow: none;
+  background: #c5c8c6; /* base02 */
 }
 
 @media print {
-    code[class*="language-"],
-    pre[class*="language-"] {
-        text-shadow: none;
-    }
+  code[class*='language-'],
+  pre[class*='language-'] {
+    text-shadow: none;
+  }
 }
 
 /* Code blocks */
-:not(pre) > code[class*="language-"],
-pre[class*="language-"] {
-    background: #ffffff; /* base00 */
+:not(pre) > code[class*='language-'],
+pre[class*='language-'] {
+  background: #ffffff; /* base00 */
 }
 
 /* Inline code */
-:not(pre) > code[class*="language-"] {
-    white-space: normal;
+:not(pre) > code[class*='language-'] {
+  white-space: normal;
 }
 
 .token.comment,
 .token.prolog,
 .token.cdata {
-    color: #b4b7b4; /* base03 */
+  color: #b4b7b4; /* base03 */
 }
 
 .token.entity,
 .language-css .token.string,
 .style .token.string {
-    color: #969896; /* base04 */
-    background: #e0e0e0; /* base01 */
+  color: #969896; /* base04 */
+  background: #e0e0e0; /* base01 */
 }
 
 .token.punctuation {
-    color: #373b41; /* base05 */
+  color: #373b41; /* base05 */
 }
 
 .token.variable,
 .token.tag,
 .token.operator,
 .token.deleted {
-    color: #CC342B; /* base08 */
+  color: #cc342b; /* base08 */
 }
 
 .token.property,
@@ -64,12 +68,12 @@ pre[class*="language-"] {
 .token.boolean,
 .token.constant,
 .token.url {
-    color: #F96A38; /* base09 */
+  color: #f96a38; /* base09 */
 }
 
 .token.class-name,
 .token.bold {
-    color: #FBA922; /* base0A */
+  color: #fba922; /* base0A */
 }
 
 .token.string,
@@ -77,17 +81,17 @@ pre[class*="language-"] {
 .token.attr-value,
 .token.inserted,
 .token.atrule {
-    color:#198844; /* base0B */
+  color: #198844; /* base0B */
 }
 
 .token.regex,
 .token.important {
-    color: #3971ED; /* base0C */
+  color: #3971ed; /* base0C */
 }
 
 .token.function,
 .token.attr-name {
-    color: #3971ED; /* base0D */
+  color: #3971ed; /* base0D */
 }
 
 .token.keyword,
@@ -95,62 +99,62 @@ pre[class*="language-"] {
 .token.italic,
 .token.char,
 .token.builtin {
-    color: #A36AC7; /* base0E */
+  color: #a36ac7; /* base0E */
 }
 
 .token.doctype {
-    color: #3971ED; /* base0F */
+  color: #3971ed; /* base0F */
 }
 
 .token.important,
 .token.bold {
-    font-weight: bold;
+  font-weight: bold;
 }
 .token.italic {
-    font-style: italic;
+  font-style: italic;
 }
 
 .token.entity {
-    cursor: help;
+  cursor: help;
 }
 
 .namespace {
-    opacity: .7;
+  opacity: 0.7;
 }
 
-[data-theme="dark"] {
-    & code[class*="language-"],
-    & pre[class*="language-"] {
-        color: #c5c8c6; /* base05 */
-    }
+[data-theme='dark'] {
+  & code[class*='language-'],
+  & pre[class*='language-'] {
+    color: #c5c8c6; /* base05 */
+  }
 
-    & pre[class*="language-"]::-moz-selection,
-    & pre[class*="language-"] ::-moz-selection,
-    & code[class*="language-"]::-moz-selection,
-    & code[class*="language-"] ::-moz-selection {
-        color: inherit;
-        background: #373b41; /* base02 */
-    }
+  & pre[class*='language-']::-moz-selection,
+  & pre[class*='language-'] ::-moz-selection,
+  & code[class*='language-']::-moz-selection,
+  & code[class*='language-'] ::-moz-selection {
+    color: inherit;
+    background: #373b41; /* base02 */
+  }
 
-    & pre[class*="language-"]::selection,
-    & pre[class*="language-"] ::selection,
-    & code[class*="language-"]::selection,
-    & code[class*="language-"] ::selection {
-        color: inherit;
-        background: #373b41; /* base02 */
-    }
+  & pre[class*='language-']::selection,
+  & pre[class*='language-'] ::selection,
+  & code[class*='language-']::selection,
+  & code[class*='language-'] ::selection {
+    color: inherit;
+    background: #373b41; /* base02 */
+  }
 
-    & :not(pre) > code[class*="language-"],
-    & pre[class*="language-"] {
-        background: #1d1f21; /* base00 */
-    }
+  & :not(pre) > code[class*='language-'],
+  & pre[class*='language-'] {
+    background: #1d1f21; /* base00 */
+  }
 
-    /* Inline code */
-    & :not(pre) > code[class*="language-"] {
-        white-space: normal;
-    }
+  /* Inline code */
+  & :not(pre) > code[class*='language-'] {
+    white-space: normal;
+  }
 }
 
 .token.comment {
-    font-style: italic;
+  font-style: italic;
 }
