Get the daylio chart rendering!

--- a/astro/src/components/DaylioEntry.astro
+++ b/astro/src/components/DaylioEntry.astro
@@ -1,6 +1,7 @@
 ---
 import clsx from 'clsx'
-import { ActivityMapping, DaylioEntry } from '../lib/daylio'
+import { DaylioEntry } from '../lib/daylio'
+import { ActivityMapping } from '../lib/enums'
 
 interface Props {
   entry: DaylioEntry
