Eject font-awesome and theme changing finally works

--- a/astro/src/components/FancyBackground.astro
+++ b/astro/src/components/FancyBackground.astro
@@ -1,12 +1,16 @@
+---
+import { FaSyncAlt } from 'react-icons/fa'
+---
+
 <div id="fancy-bg" class="print:hidden"></div>
 <button
   id="fancy-bg-refresh-btn"
-  class="btn btn-lg btn-primary btn-circle fixed tooltip tooltip-left right-4 bottom-4 normal-case text-4xl print:hidden"
+  class="btn btn-lg btn-primary btn-circle fixed tooltip tooltip-left right-4 bottom-4 normal-case print:hidden inline-flex"
   aria-label="Regenerate the background pattern"
   data-tip="Regenerate the background pattern"
   type="reset"
 >
-  <i class="fa-solid fa-rotate"></i>
+  <FaSyncAlt size="2.25rem" />
 </button>
 
 <style>
