--- a/astro/src/layouts/Layout.astro
+++ b/astro/src/layouts/Layout.astro
@@ -51,21 +51,21 @@ const latestFeeling = await daylio.getLatest()
       crossorigin="true"
     />
     <link rel="stylesheet" href="/css/style.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
-    />
     <script is:inline>
-      if (localStorage.getItem("theme") === null) {
-        const prefersDark = window.matchMedia && window.matchMedia("(prefers-color-scheme:dark)").matches
-        document.documentElement.setAttribute("data-theme", prefersDark ? "dark" : "light");
+      if (localStorage.getItem('theme') === null) {
+        const prefersDark =
+          window.matchMedia &&
+          window.matchMedia('(prefers-color-scheme:dark)').matches
+        document.documentElement.setAttribute(
+          'data-theme',
+          prefersDark ? 'dark' : 'light'
+        )
       } else {
-        document.documentElement.setAttribute("data-theme", localStorage.getItem("theme"));
+        document.documentElement.setAttribute(
+          'data-theme',
+          localStorage.getItem('theme')
+        )
       }
-    </script>
-    <script>
-      import { themeChange } from 'theme-change'
-      themeChange()
     </script>
   </head>
   <body>
