Add StreamingAlbum + GithubFile embeds

--- a/astro/src/components/Post/components.astro
+++ b/astro/src/components/Post/components.astro
@@ -1,7 +1,13 @@
 ---
+import GithubFile from './GithubFile.astro'
 import Image from './Image.astro'
+import StreamingAlbum from './StreamingAlbum.astro'
+import { Tweet } from '@astro-community/astro-embed-twitter'
 
 export const components = {
+  GithubFile,
   img: Image,
+  StreamingAlbum,
+  Tweet,
 }
 ---
