--- a/astro/src/components/EmojiText.astro
+++ b/astro/src/components/EmojiText.astro
@@ -2,13 +2,14 @@
 export interface Props {
   emoji: string
   label: string
+  className?: string
   fallback?: any
 }
 
-const { emoji, label } = Astro.props
+const { emoji, label, className } = Astro.props
 ---
 
-<span role="img" aria-label={label} class="pr-2">
+<span role="img" aria-label={label} class={className}>
   {emoji}
 </span>
 <slot />
