Got the site building!

--- a/astro/src/components/Post/components.astro
+++ b/astro/src/components/Post/components.astro
@@ -6,8 +6,9 @@ import { Tweet } from '@astro-community/astro-embed-twitter'
 
 export const components = {
   GithubFile,
-  img: Image,
+  JobSearchSankeyChart: () => null,
   StreamingAlbum,
   Tweet,
+  img: Image,
 }
 ---
