--- a/astro/src/styles/tailwind.css
+++ b/astro/src/styles/tailwind.css
@@ -2,6 +2,7 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 @import './fancyBackground.css';
+@import './code.css';
 
 @layer components {
   .paper {
